Fix interlaced prediction for RGB utvideo.

Fixes ticket #1215