libavcodec/utvideo.c
@@ -438,9 +438,15 @@ static int decode_frame(AVCodecContext *avctx, void *data, int *data_size,
             if (ret)
                 return ret;
             if (c->frame_pred == PRED_MEDIAN)
+                if (!c->interlaced) {
                 restore_median(c->pic.data[0] + rgb_order[i], c->planes,
                                c->pic.linesize[0], avctx->width, avctx->height,
                                c->slices, 0);
+                } else {
+                    restore_median_il(c->pic.data[0] + rgb_order[i], c->planes,
+                                      c->pic.linesize[0], avctx->width, avctx->height,
+                                      c->slices, 0);
+                }
         }
         restore_rgb_planes(c->pic.data[0], c->planes, c->pic.linesize[0],
                            avctx->width, avctx->height);
